# SystemCrafter-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  api_designer.py  backend_generator.py  base.py  builder.py  db_designer.py  deployer.py  frontend_generator.py  infra_engineer.py  qa_agent.py  recovery_agent.py  requirement_interpreter.py  system_architect.py
alembic/: env.py
docs/: API.md  ARCHITECTURE.md
orchestrator/: __init__.py  main.py
orchestrator/api/: __init__.py  auth.py  llm.py  projects.py  tasks.py  websocket.py
orchestrator/core/: __init__.py  config.py  database.py  llm_client.py  logging.py  security.py
orchestrator/models/: __init__.py
orchestrator/schemas/: __init__.py
orchestrator/services/: __init__.py  orchestrator.py  websocket_manager.py
scripts/: check_llm_health.py  check_tasks.py  ollama_list_models.py  ollama_test.py  smoke_test.py  start_first_project.py  start_project.py  watch_project_ws.py
templates/: README.md
tests/: conftest.py  test_agents.py  test_auth.py  test_projects.py
ui/: .dockerignore  .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
ui/public/: manifest.json
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/components/: ArtifactBrowser.tsx  LLMHealthBanner.tsx  LogViewer.tsx  ProjectCard.tsx  TaskProgress.tsx  index.ts
ui/src/lib/: api.ts  index.ts  llm.ts  store.ts  utils.ts  (+1 more)
(+15 files in other folders)
